# debsign-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
debian/: changelog  control  copyright  files  rules
src/: deb.rs  main.rs  sign.rs
tests/: helloworld_0.1.0_arm64.deb  helloworld_signed_0.1.0_arm64.deb  integration_test.rs  test-key-public.asc  test-key.asc
tests/helloworld/: Cargo.toml
tests/helloworld/debian/: control  copyright  files  rules
tests/helloworld/debian/helloworld/DEBIAN/: control  md5sums
