[package]
name = "debsign-rs"
version = "0.1.0"
edition = "2021"
authors = ["Shaun Savage <savages@crmep.com>"]
description = "Sign Debian packages with GPG"
license = "MIT OR Apache-2.0"
repository = "https://github.com/greenpdx/debsign-rs"
homepage = "https://github.com/greenpdx/debsign-rs"
readme = "README.md"
keywords = ["debian", "deb", "gpg", "signing", "packaging"]
categories = ["command-line-utilities", "cryptography"]
rust-version = "1.70"

[[bin]]
name = "debsign"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Archive handling
ar = "0.9"

# Checksums
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"

# GPG signing (pure Rust)
sequoia-openpgp = "1"

# Compression (for reading control.tar.* and data.tar.*)
flate2 = "1"
xz2 = "0.1"
zstd = "0.13"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
tempfile = "3"
chrono = "0.4"
